@startuml
'https://plantuml.com/object-diagram

class Main{
+ static void main(string [] args)
Streaming streaming = new Streaming()
streaming.startStreaming()
}

class Streaming{
- List<Movie> allMovies
- List<Serie> alleSeries
- TextUI ui
- FileIO io
StartMenu startmenu = new StartMenu();
+ static User currentUser
+ boolean loginOrRegister ()
+ void displayMainMenu ()
+ void searchForMovieByGenre ()
+ void searchForMovieByTitle ()
+ void play(Movie chosenMovie)
+ void displayWatchedList ()
+ void displaySavedList ()
+ void setup()
+ void startStreaming()
}

class User{
- String userName
- String userPassword
- List<Media>watched
- List<Media>saved

+getUserName()
+getUserPassword()
+ void userWatched (Media m)
+ void userSaved (Media m)
+ List<Media> getWatched()
+ void watched(Media media)
+ List<Media> getSaved()
+ void addToSaveList(Media movie)
+ String toString()

}

abstract Media{
# String title
# String[] genre
# double rating

Media(String title, String[] genre, double rating)
+ String getTitle()
+ String[] getGenre()
+ double getRating()
}

class StartMenu{
- String userName
- String userPassword
- User currenUser
# List<User> registeredUsers = new linkedList<>()
- TextUI ui = new TextUI()
- FileIO io = new FileIO()
StartMenu()
+ void createUser()
+ User login()
}

class FileIO{
+ ArrayList<User> readUserData (String path)
+ void saveUserData (List<User> users)
+ List<User>loadAllUserData()
+ void saveWatchedMedia (List<Media> watched)
+ void saveSavedMedia(List<Media> saved)
+ List<Movie> readMovieData()
+ List<Serie> readSerieData()
}

class TextUI{
- Scanner scanner
+ String getInput(String msg)
+ void displayMessage(String msg)
+ int chooseMovie(List<Movie>)
+ void displayMovieList(List<Movie> in)
+ void displaySerieList(List<Serie> in)
}

class Movie {
- int publicationYear

+ Movie(String title, int publicationYear, String[] genre, double rating)
super(title, genre, rating)

+ int getPublicationYear()
+ String toString()
}

class Serie{
- String yearsRunning
- String[] seasonsAndEpisodes

+ Serie(String title, String yearsRunning, String[] genre, double rating, String[] seasonsAndEpisodes)
+ String getYearsRunning()
+ String[] getSeasonsAndEpisodes()
+ String toString()
}

Main o-- Streaming

Streaming o-- StartMenu
Streaming o-- FileIO
Streaming o-- Media

Media .. Movie
Media .. Serie

StartMenu o-- User
StartMenu o--FileIO
StartMenu o-- TextUI

@enduml

extends <|-- (is-a)
composition *-- (must-have)
Aggregation o-- (can-have)
Associering <--
